--- a/test/fuzztest/host/setbluetoothscanmode_fuzzer/BUILD.gn
+++ b/test/fuzztest/host/setbluetoothscanmode_fuzzer/BUILD.gn
@@ -35,7 +35,7 @@ ohos_fuzztest("SetBluetoothScanModeFuzzTest") {
 
   deps = [ "$SUBSYSTEM_DIR/bluetooth/frameworks/inner:btframework" ]
 
-  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
+  external_deps = [ "hilog:libhilog" ]
 }
 
 ###############################################################################
