--- a/test/unittest/host/BUILD.gn
+++ b/test/unittest/host/BUILD.gn
@@ -56,7 +56,7 @@ ohos_unittest("btfw_host_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
