--- a/sa_profile/BUILD.gn
+++ b/sa_profile/BUILD.gn
@@ -13,8 +13,8 @@
 
 import("//build/ohos/sa_profile/sa_profile.gni")
 
-ohos_sa_profile("communication_bluetooth_sa_profile") {
+ohos_sa_profile("communication_bluetooth_service_sa_profile") {
   sources = [ "1130.json" ]
 
-  part_name = "bluetooth"
+  part_name = "bluetooth_service"
 }
