--- a/services/bluetooth/hardware/BUILD.gn
+++ b/services/bluetooth/hardware/BUILD.gn
@@ -38,7 +38,7 @@ ohos_shared_library("bluetooth_hdi_adapter") {
       "c_utils:utils",
       "drivers_interface_bluetooth:libbluetooth_hci_proxy_1.0",
       "hdf_core:libhdi",
-      "hiviewdfx_hilog_native:libhilog",
+      "hilog:libhilog",
       "ipc:ipc_core",
     ]
   } else {
@@ -52,5 +52,5 @@ ohos_shared_library("bluetooth_hdi_adapter") {
   }
 
   subsystem_name = "communication"
-  part_name = "bluetooth"
+  part_name = "bluetooth_service"
 }
