--- a/services/bluetooth/ipc/BUILD.gn
+++ b/services/bluetooth/ipc/BUILD.gn
@@ -13,7 +13,7 @@
 
 import("//build/ohos.gni")
 import("//build/ohos_var.gni")
-import("//foundation/communication/bluetooth/bluetooth.gni")
+import("//foundation/communication/bluetooth_service/bluetooth.gni")
 
 SUBSYSTEM_DIR = "//foundation/communication"
 
@@ -48,91 +48,91 @@ ohos_static_library("btipc_service") {
     "src/bluetooth_socket_stub.cpp",
   ]
 
-  if (bluetooth_a2dp_sink_feature) {
+  if (bluetooth_service_a2dp_sink_feature) {
     sources += [
       "src/bluetooth_a2dp_sink_observer_proxy.cpp",
       "src/bluetooth_a2dp_sink_stub.cpp",
     ]
   }
 
-  if (bluetooth_a2dp_source_feature) {
+  if (bluetooth_service_a2dp_source_feature) {
     sources += [
       "src/bluetooth_a2dp_src_observer_proxy.cpp",
       "src/bluetooth_a2dp_src_stub.cpp",
     ]
   }
 
-  if (bluetooth_avrcp_ct_feature) {
+  if (bluetooth_service_avrcp_ct_feature) {
     sources += [
       "src/bluetooth_avrcp_ct_observer_proxy.cpp",
       "src/bluetooth_avrcp_ct_stub.cpp",
     ]
   }
 
-  if (bluetooth_avrcp_tg_feature) {
+  if (bluetooth_service_avrcp_tg_feature) {
     sources += [
       "src/bluetooth_avrcp_tg_observer_proxy.cpp",
       "src/bluetooth_avrcp_tg_stub.cpp",
     ]
   }
 
-  if (bluetooth_hfp_ag_feature) {
+  if (bluetooth_service_hfp_ag_feature) {
     sources += [
       "src/bluetooth_hfp_ag_observer_proxy.cpp",
       "src/bluetooth_hfp_ag_stub.cpp",
     ]
   }
 
-  if (bluetooth_hfp_hf_feature) {
+  if (bluetooth_service_hfp_hf_feature) {
     sources += [
       "src/bluetooth_hfp_hf_observer_proxy.cpp",
       "src/bluetooth_hfp_hf_stub.cpp",
     ]
   }
 
-  if (bluetooth_hid_host_feature) {
+  if (bluetooth_service_hid_host_feature) {
     sources += [
       "src/bluetooth_hid_host_observer_proxy.cpp",
       "src/bluetooth_hid_host_stub.cpp",
     ]
   }
 
-  if (bluetooth_map_client_feature) {
+  if (bluetooth_service_map_client_feature) {
     sources += [
       "src/bluetooth_map_mce_observer_proxy.cpp",
       "src/bluetooth_map_mce_stub.cpp",
     ]
   }
 
-  if (bluetooth_map_server_feature) {
+  if (bluetooth_service_map_server_feature) {
     sources += [
       "src/bluetooth_map_mse_observer_proxy.cpp",
       "src/bluetooth_map_mse_stub.cpp",
     ]
   }
 
-  if (bluetooth_opp_feature) {
+  if (bluetooth_service_opp_feature) {
     sources += [
       "src/bluetooth_opp_observer_proxy.cpp",
       "src/bluetooth_opp_stub.cpp",
     ]
   }
 
-  if (bluetooth_pan_feature) {
+  if (bluetooth_service_pan_feature) {
     sources += [
       "src/bluetooth_pan_observer_proxy.cpp",
       "src/bluetooth_pan_stub.cpp",
     ]
   }
 
-  if (bluetooth_pbap_client_feature) {
+  if (bluetooth_service_pbap_client_feature) {
     sources += [
       "src/bluetooth_pbap_pce_observer_proxy.cpp",
       "src/bluetooth_pbap_pce_stub.cpp",
     ]
   }
 
-  if (bluetooth_pbap_server_feature) {
+  if (bluetooth_service_pbap_server_feature) {
     sources += [
       "src/bluetooth_pbap_pse_observer_proxy.cpp",
       "src/bluetooth_pbap_pse_stub.cpp",
@@ -145,7 +145,7 @@ ohos_static_library("btipc_service") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
@@ -159,7 +159,7 @@ ohos_static_library("btipc_static") {
 
   sources = [ "$SUBSYSTEM_DIR/bluetooth/frameworks/inner/ipc/src/bluetooth_host_proxy.cpp" ]
 
-  if (bluetooth_a2dp_source_feature) {
+  if (bluetooth_service_a2dp_source_feature) {
     sources += [ "$SUBSYSTEM_DIR/bluetooth/frameworks/inner/ipc/src/bluetooth_a2dp_src_proxy.cpp" ]
   }
 
@@ -168,11 +168,11 @@ ohos_static_library("btipc_static") {
   external_deps = [
     "c_utils:utils",
     "hisysevent_native:libhisysevent",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
     "samgr:samgr_proxy",
   ]
 
   subsystem_name = "communication"
-  part_name = "bluetooth"
+  part_name = "bluetooth_service"
 }
