--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -62,7 +62,7 @@ ohos_unittest("btfw_gatt_spp_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
