--- a/test/unittest/avrcp/BUILD.gn
+++ b/test/unittest/avrcp/BUILD.gn
@@ -56,7 +56,7 @@ ohos_unittest("btfw_avrcp_tg_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
@@ -77,7 +77,7 @@ ohos_unittest("btfw_avrcp_ct_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
@@ -89,11 +89,11 @@ group("unittest") {
   deps = []
 
   if (is_phone_product) {
-    if (bluetooth_avrcp_ct_feature) {
+    if (bluetooth_service_avrcp_ct_feature) {
       deps += [ ":btfw_avrcp_ct_unit_test" ]
     }
 
-    if (bluetooth_avrcp_tg_feature) {
+    if (bluetooth_service_avrcp_tg_feature) {
       deps += [ ":btfw_avrcp_tg_unit_test" ]
     }
   }
