--- a/test/unittest/ble/BUILD.gn
+++ b/test/unittest/ble/BUILD.gn
@@ -53,7 +53,7 @@ ohos_moduletest("btfw_ble_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
