--- a/test/unittest/gatt/BUILD.gn
+++ b/test/unittest/gatt/BUILD.gn
@@ -55,7 +55,7 @@ ohos_unittest("btfw_gatt_service_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
@@ -76,7 +76,7 @@ ohos_unittest("btfw_gatt_client_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
@@ -90,7 +90,7 @@ ohos_unittest("btfw_gatt_server_unit_test") {
 
   deps = [
     "$SUBSYSTEM_DIR/bluetooth/frameworks/inner:btframework",
-    "$SUBSYSTEM_DIR/bluetooth/services/bluetooth/server:bluetooth_server",
+    "$SUBSYSTEM_DIR/bluetooth_service/services/bluetooth/server:bluetooth_server",
     "//base/global/resource_management/frameworks/resmgr:global_resmgr",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
@@ -98,7 +98,7 @@ ohos_unittest("btfw_gatt_server_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
@@ -119,7 +119,7 @@ ohos_unittest("btfw_gatt_manager_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
@@ -133,7 +133,7 @@ ohos_unittest("btfw_gatt_descriptor_unit_test") {
 
   deps = [
     "$SUBSYSTEM_DIR/bluetooth/frameworks/inner:btframework",
-    "$SUBSYSTEM_DIR/bluetooth/services/bluetooth/server:bluetooth_server",
+    "$SUBSYSTEM_DIR/bluetooth_service/services/bluetooth/server:bluetooth_server",
     "//base/global/resource_management/frameworks/resmgr:global_resmgr",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
@@ -141,7 +141,7 @@ ohos_unittest("btfw_gatt_descriptor_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
@@ -164,7 +164,7 @@ ohos_unittest("btfw_gatt_characteristic_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
