--- a/test/unittest/gatt_c/BUILD.gn
+++ b/test/unittest/gatt_c/BUILD.gn
@@ -47,7 +47,7 @@ ohos_unittest("btfw_gatt_c_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
   ]
 }
 
@@ -66,7 +66,7 @@ ohos_unittest("btfw_gatt_client_c_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
   ]
 }
 
