--- a/test/unittest/hfp/BUILD.gn
+++ b/test/unittest/hfp/BUILD.gn
@@ -12,7 +12,7 @@
 # limitations under the License.
 
 import("//build/test.gni")
-import("//foundation/communication/bluetooth/bluetooth.gni")
+import("//foundation/communication/bluetooth_service/bluetooth.gni")
 
 module_output_path = "bluetooth/framework_test/hfp/"
 SUBSYSTEM_DIR = "//foundation/communication"
@@ -56,7 +56,7 @@ ohos_unittest("btfw_hfp_ag_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
@@ -77,7 +77,7 @@ ohos_unittest("btfw_hfp_hf_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
@@ -91,7 +91,7 @@ ohos_unittest("btfw_hf_call_unit_test") {
 
   deps = [
     "$SUBSYSTEM_DIR/bluetooth/frameworks/inner:btframework",
-    "$SUBSYSTEM_DIR/bluetooth/services/bluetooth/server:bluetooth_server",
+    "$SUBSYSTEM_DIR/bluetooth_service/services/bluetooth/server:bluetooth_server",
     "//base/global/resource_management/frameworks/resmgr:global_resmgr",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
@@ -99,7 +99,7 @@ ohos_unittest("btfw_hf_call_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
@@ -113,11 +113,11 @@ group("unittest") {
   if (is_phone_product) {
     deps += [ ":btfw_hf_call_unit_test" ]
 
-    if (bluetooth_hfp_ag_feature) {
+    if (bluetooth_service_hfp_ag_feature) {
       deps += [ ":btfw_hfp_ag_unit_test" ]
     }
 
-    if (bluetooth_hfp_hf_feature) {
+    if (bluetooth_service_hfp_hf_feature) {
       deps += [ ":btfw_hfp_hf_unit_test" ]
     }
   }
