--- a/test/unittest/spp/BUILD.gn
+++ b/test/unittest/spp/BUILD.gn
@@ -54,7 +54,7 @@ ohos_unittest("btfw_spp_test") {
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
   ]
 }
