--- a/services/bluetooth/service/BUILD.gn
+++ b/services/bluetooth/service/BUILD.gn
@@ -205,10 +205,10 @@ config("btservice_config") {
 }
 
 ohos_shared_library("btservice") {
-  sanitize = {
-    cfi = true
-    blocklist = "./bluetooth_service_blocklist.txt"
-  }
+  # sanitize = {
+  #   cfi = true
+  #   blocklist = "./bluetooth_service_blocklist.txt"
+  # }
   stack_protector_ret = true
   configs = [ ":btservice_config" ]
   public_configs = [ ":btservice_public_config" ]
@@ -421,17 +421,17 @@ ohos_shared_library("btservice") {
     "access_token:libaccesstoken_sdk",
     "access_token:libtokenid_sdk",
     "audio_framework:audio_client",
+    "bluetooth:btcommon",
+    "c_utils:utils",
+    "call_manager:tel_call_manager_api",
     "common_event_service:cesfwk_innerkits",
     "core_service:tel_core_service_api",
     "hdf_core:libhdi",
-    "hisysevent:libhisysevent",
     "hilog:libhilog",
+    "hisysevent:libhisysevent",
     "ipc:ipc_core",
     "samgr:samgr_proxy",
-    "call_manager:tel_call_manager_api",
     "state_registry:tel_state_registry_api",
-    "bluetooth:btcommon",
-    "c_utils:utils",
   ]
 
   if (bluetooth_service_avrcp_avsession) {
