--- a/services/bluetooth/stack/BUILD.gn
+++ b/services/bluetooth/stack/BUILD.gn
@@ -212,10 +212,10 @@ config("btstack_config") {
 }
 
 ohos_shared_library("btstack") {
-  sanitize = {
-    cfi = true
-    blocklist = "./btstack_blocklist.txt"
-  }
+  # sanitize = {
+  #   cfi = true
+  #   blocklist = "./btstack_blocklist.txt"
+  # }
   stack_protector_ret = true
   configs = [ ":btstack_config" ]
   public_configs = [ ":btstack_public_config" ]
@@ -232,8 +232,8 @@ ohos_shared_library("btstack") {
   ]
 
   external_deps = [
+    "bluetooth:btcommon",
     "hilog:libhilog",
-    "bluetooth:btcommon"
   ]
 
   subsystem_name = "communication"
