增加电话服务相关权限 Signed-off-by: liuxiyao223 <liuxiyao223@huawei.com>

--- a/services/bluetooth/etc/init/bluetooth_service.cfg
+++ b/services/bluetooth/etc/init/bluetooth_service.cfg
@@ -17,7 +17,14 @@
             "uid" : "bluetooth",
             "gid" : ["bluetooth", "shell"],
             "caps" : ["CAP_NET_ADMIN"],
-	    "secon" : "u:r:bluetooth_service:s0"
+	    "secon" : "u:r:bluetooth_service:s0",
+            "permission" : [
+                "ohos.permission.GET_NETWORK_INFO",
+                "ohos.permission.PLACE_CALL",
+                "ohos.permission.GET_TELEPHONY_STATE",
+                "ohos.permission.ANSWER_CALL"
+
+            ]
         }
     ]
 }
