--- a/services/bluetooth/stack/BUILD.gn
+++ b/services/bluetooth/stack/BUILD.gn
@@ -212,10 +212,12 @@ config("btstack_config") {
 }
 
 ohos_shared_library("btstack") {
-  # sanitize = {
-  #   cfi = true
-  #   blocklist = "./btstack_blocklist.txt"
-  # }
+  sanitize = {
+    cfi = true
+    blocklist = "./btstack_blocklist.txt"
+    cfi_cross_dso = true
+    debug = false
+  }
   stack_protector_ret = true
   configs = [ ":btstack_config" ]
   public_configs = [ ":btstack_public_config" ]
