--- a/services/bluetooth/hardware/BUILD.gn
+++ b/services/bluetooth/hardware/BUILD.gn
@@ -15,9 +15,11 @@ import("//build/ohos.gni")
 import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
 
 ohos_shared_library("bluetooth_hdi_adapter") {
-  # sanitize = {
-  #   cfi = true
-  # }
+  sanitize = {
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+  }
   stack_protector_ret = true
   include_dirs = [
     "include",
