add opp profiile
Signed-off-by: liuqian_local <704938153@qq.com>

--- a/bluetooth.gni
+++ b/bluetooth.gni
@@ -20,4 +20,5 @@ declare_args() {
   bluetooth_service_hfp_hf_feature = false
   bluetooth_service_hid_host_feature = true
   bluetooth_service_pan_feature = true
+  bluetooth_service_opp_feature = true
 }
