--- a/services/bluetooth/service/BUILD.gn
+++ b/services/bluetooth/service/BUILD.gn
@@ -349,6 +349,7 @@ ohos_shared_library("btservice") {
     "call_manager:tel_call_manager_api",
     "common_event_service:cesfwk_innerkits",
     "core_service:tel_core_service_api",
+    "graphic_2d:surface",
     "hdf_core:libhdi",
     "hilog:libhilog",
     "hisysevent:libhisysevent",
